rebase first commit:

--- a/README
+++ b/README
@@ -1,5 +1,7 @@
-## Hello Me
+ ## Hello Me
 This is the practice of git
 this is master branch
 
 let me learn something 
+
+this will rebase to master branch
