--- a/README
+++ b/README
@@ -4,4 +4,4 @@ this is master branch
 
 let me learn something 
 
-this will rebase to master branch
+this is rebase test, this sentence should be rebase to master
